Fais pour que le joueur se déplace seulement lorsqu'il appuie sur les boutons de couleurs qui correspondent à celle de l'indicateur courant.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp/
+!Temp/
 Obj/
 UnityGenerated/
-Library/
+!Library/
 Assets/AssetStoreTools*
 
 # ===================================== #
